Modify to karat

--- a/components/dashboard/dashboard.html
+++ b/components/dashboard/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Page title -->
-    <title>Dashboard | App Annie</title>
+    <title>Dashboard | Karat</title>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" type="image/ico" href="../favicon.ico" />
     {% include 'dashboard/common_css.html' %}
@@ -32,7 +32,7 @@
         <div class="content animate-panel">
             <div class="row">
                 <div class="col-lg-12 text-center m-t-md">
-                    <h2>Welcome to App Annie</h2>
+                    <h2>Welcome to Karat</h2>
                     <p>
                         You can <strong>talk with</strong> Annie. She is very smart.
                     </p>
