--- a/components/dashboard/footer.html
+++ b/components/dashboard/footer.html
@@ -1,4 +1,4 @@
 <footer class="footer">
     <span class="pull-right">Build a better app business</span>
-    App Annie © 2016 
+    Karat © 2016 
 </footer>
