--- a/components/dashboard/insights.html
+++ b/components/dashboard/insights.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Page title -->
-    <title>Insights | App Annie</title>
+    <title>Insights | Karat</title>
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" type="image/ico" href="../favicon.ico" />
@@ -78,7 +78,7 @@
         <div class="panel-body">
             <a> <h4>Announcing Forecast Intelligence: Predicting the Future of the App Economy</h4></a>
             <p>
-                In February, App Annie released our first app forecast, which introduced the use of advanced data science, industry expertise, and leading information assets to produce a view of the app economy that provides exceptional granularity. The forecast reflected how apps have ascended to become the primary way we communicate, share, shop and enjoy entertainment. We noted a trajectory of increasing downloads and revenue across countries as people around the globe embraced the app platforms of increasingly inexpensive smartphones and rising cellular data speeds.
+                In February, Karat released our first app forecast, which introduced the use of advanced data science, industry expertise, and leading information assets to produce a view of the app economy that provides exceptional granularity. The forecast reflected how apps have ascended to become the primary way we communicate, share, shop and enjoy entertainment. We noted a trajectory of increasing downloads and revenue across countries as people around the globe embraced the app platforms of increasingly inexpensive smartphones and rising cellular data speeds.
             </p>
         </div>
         <div class="panel-footer">
@@ -230,12 +230,12 @@
             <img class="img-responsive" src="./dashboard_files/p2.jpg" alt="">
             <div class="title">
                 <a> <h4>Mobile Streaming</h4></a>
-                <small>Worldwide App Annie Index for Apps April 2016</small>
+                <small>Worldwide Karat Index for Apps April 2016</small>
             </div>
         </div>
         <div class="panel-body">
             <p>
-                Each month, the App Annie Index highlights the top-performing games and apps for the iOS App Store and Google Play. Our analysis covers trends among the leading apps across countries and categories, and is the industry standard for professionals looking to compare leading apps and publishers.
+                Each month, the Karat Index highlights the top-performing games and apps for the iOS App Store and Google Play. Our analysis covers trends among the leading apps across countries and categories, and is the industry standard for professionals looking to compare leading apps and publishers.
             </p>
             
         </div>
@@ -287,7 +287,7 @@
                     <img src="./dashboard_files/logo.png" alt="profile-picture">
                 </a>
                 <div class="media-body">
-                    <small>Created by: <span class="font-bold">App Annie</span> </small>
+                    <small>Created by: <span class="font-bold">Karat</span> </small>
                     <br>
                     <small class="text-muted">25.05.2016, 08:34 pm</small>
                 </div>
@@ -400,7 +400,7 @@
                 In Europe, newspaper readership is decreasing as circulation dwindles. At the same time, mobile usage is increasing and there are signs that people are spending more time with long-form news content on their smartphones.
             </p>
             <p>
-                Is the future for Europe’s news companies on mobile? Using App Annie Intelligence, we looked at the iOS App Store’s News category in various European countries — and we found publishers in their home markets command a massive advantage.
+                Is the future for Europe’s news companies on mobile? Using Karat Intelligence, we looked at the iOS App Store’s News category in various European countries — and we found publishers in their home markets command a massive advantage.
             </p>
             <a  href="/insights/detail">Read more</a>
         </div>
