--- a/components/dashboard/insights_detail.html
+++ b/components/dashboard/insights_detail.html
@@ -30,9 +30,9 @@
                     <div class="hpanel blog-article-box">
                         <div class="panel-heading">
                             <h4>Mobile Streaming Shows Its Monetization Potential</h4>
-                            <small>Worldwide App Annie Index for Apps April 2016</small>
+                            <small>Worldwide Karat Index for Apps April 2016</small>
                             <div class="text-muted small">
-                                Created by: <span class="font-bold">App Annie</span> 18.05.2016, 06:45 pm
+                                Created by: <span class="font-bold">Karat</span> 18.05.2016, 06:45 pm
                             </div>
                         </div>
                         <div class="panel-body">
@@ -43,10 +43,10 @@
                             </p>
                             <br>
                             <blockquote class="pull-left" style="max-width: 250px">
-                                <p>Worldwide App Annie Index for Apps April 2016</p>
+                                <p>Worldwide Karat Index for Apps April 2016</p>
                             </blockquote>
                             <p>
-                                Each month, the App Annie Index highlights the top-performing games and apps for the iOS App Store and Google Play. Our analysis covers trends among the leading apps across countries and categories, and is the industry standard for professionals looking to compare leading apps and publishers.
+                                Each month, the Karat Index highlights the top-performing games and apps for the iOS App Store and Google Play. Our analysis covers trends among the leading apps across countries and categories, and is the industry standard for professionals looking to compare leading apps and publishers.
                             </p>
                             <br>
                             <p>
