--- a/components/dashboard/loading_splash.html
+++ b/components/dashboard/loading_splash.html
@@ -1,9 +1,9 @@
 <div id="loading_splash" class="splash">
     <div class="color-line"></div>
     <div class="splash-title">
-        <h1>App Annie - Build a better app business</h1>
+        <h1>Karat - Build a better app business</h1>
         <p>
-            App Annie delivers data and insights to succeed in the app economy.
+            Karat delivers data and insights to succeed in the app economy.
         </p>
         <div class="spinner">
             <div class="rect1"></div>
