--- a/components/dashboard/menu.html
+++ b/components/dashboard/menu.html
@@ -45,7 +45,7 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a>App Annie Account</a>
+                            <a>Karat Account</a>
                         </li>
                         <li>
                             <a>Teams</a>
@@ -61,7 +61,7 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a>Explore App Annie</a>
+                            <a>Explore Karat</a>
                         </li>
                         <li>
                             <a>Support</a>
