--- a/components/dashboard/favorite.html
+++ b/components/dashboard/favorite.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Page title -->
-    <title>Favorite | App Annie</title>
+    <title>Favorite | Karat</title>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" type="image/ico" href="../favicon.ico" />
     {% include 'dashboard/common_css.html' %}
