--- a/components/dashboard/header.html
+++ b/components/dashboard/header.html
@@ -1,13 +1,13 @@
 <div id="header">
     <div class="color-line"></div>
     <div id="logo" class="light-version">
-        <span>App Annie</span>
+        <span>Karat</span>
     </div>
     <nav role="navigation">
         <div class="header-link hide-menu"> <i class="fa fa-bars"></i>
         </div>
         <div class="small-logo">
-            <span class="text-primary">App Annie</span>
+            <span class="text-primary">Karat</span>
         </div>
         <form role="search" class="navbar-form-custom" method="post">
             <div class="form-group">
